--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "nuxt dev",
-    "build": "node --max-old-space-size=4096 node_modules/nuxt/bin/nuxt.mjs build",
     "lint": "eslint . -c .eslintrc.cjs --ext .ts,.js,.cjs,.vue,.tsx,.jsx",
     "build:icons": "tsx plugins/iconify/build-icons.ts",
     "postinstall": "nuxt prepare && npm run build:icons",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "build": "nuxt build",
+    "postbuild": "npm run build:icons"
   },
   "dependencies": {
     "@floating-ui/dom": "1.5.3",
