--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "typescript": "^5.3.3",
     "vite": "^5.0.5",
     "vite-svg-loader": "^5.1.0",
+    "vite-plugin-vuetify": "^2.0.1",
     "vue": "3.3.13",
     "vue-router": "^4.2.5"
   },
