--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:icons": "tsx plugins/iconify/build-icons.ts",
     "postinstall": "nuxt prepare && npm run build:icons",
     "generate": "nuxt generate",
-    "build": "nuxt build",
+    "build": "node --max-old-space-size=8192 node_modules/nuxt/bin/nuxt.mjs build",
     "postbuild": "npm run build:icons"
   },
   "dependencies": {
