--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "nuxt dev",
+    "build": "node --max-old-space-size=4096 node_modules/nuxt/bin/nuxt.mjs build",
     "lint": "eslint . -c .eslintrc.cjs --ext .ts,.js,.cjs,.vue,.tsx,.jsx",
     "build:icons": "tsx plugins/iconify/build-icons.ts",
     "postinstall": "nuxt prepare && npm run build:icons",
-    "generate": "nuxt generate",
-    "build": "node --max-old-space-size=8192 node_modules/nuxt/bin/nuxt.mjs build",
-    "postbuild": "npm run build:icons"
+    "generate": "nuxt generate"
   },
   "dependencies": {
     "@floating-ui/dom": "1.5.3",
@@ -34,6 +33,7 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "esbuild": "^0.21.5",
+    "flatpickr": "^4.6.13",
     "generate": "^0.14.0",
     "moment": "^2.30.1",
     "nitro": "^0.0.0",
@@ -41,6 +41,7 @@
     "preline": "^2.1.0",
     "prismjs": "^1.29.0",
     "roboto-fontface": "^0.10.0",
+    "sweetalert2": "^11.12.4",
     "tailwindcss": "^3.4.4",
     "vue-chartjs": "^5.3.1",
     "vue-flatpickr-component": "11.0.3",
@@ -49,6 +50,7 @@
     "vue3-datepicker": "^0.4.0",
     "vue3-perfect-scrollbar": "^1.6.1",
     "vuetify": "3.4.9",
+    "vuex": "^4.0.2",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
@@ -89,8 +91,8 @@
     "type-fest": "^4.8.3",
     "typescript": "^5.3.3",
     "vite": "^5.0.5",
-    "vite-svg-loader": "^5.1.0",
     "vite-plugin-vuetify": "^2.0.1",
+    "vite-svg-loader": "^5.1.0",
     "vue": "3.3.13",
     "vue-router": "^4.2.5"
   },
